docs: update enio's readme

--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "create.lib.react": "nx g @nrwl/react:lib",
     "create.lib.nest": "nx g @nrwl/nest:lib",
     "create.lib.next": "nx g @nrwl/next:lib",
+    "serve": "nx serve",
     "lint": "nx lint",
     "test": "nx test",
+    "test:affected": "nx affected:test",
+    "e2e": "nx e2e",
+    "e2e:affected": "nx affected:e2e",
     "build": "nx build",
     "release": "nx affected --target version",
     "publish": "nx publish --verbose",
