build: add compodoc plugin, and update documentation

--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "create.lib.react": "nx g @nrwl/react:lib",
     "create.lib.nest": "nx g @nrwl/nest:lib",
     "create.lib.next": "nx g @nrwl/next:lib",
+    "create.docs": "nx g @twittwer/compodoc:config",
+    "create.book": "nx g @nrwl/storybook:configuration",
+    "serve.book": "nx storybook",
+    "build.book": "nx build-storybook",
     "serve": "nx serve",
     "lint": "nx lint",
     "test": "nx test",
@@ -53,6 +57,7 @@
     "@nx-extend/firebase-hosting": "^1.0.1",
     "@nxtend/firebase": "^12.1.0",
     "@testing-library/react": "13.4.0",
+    "@twittwer/compodoc": "^1.8.2",
     "@types/jest": "28.1.1",
     "@types/mocha": "^9.1.1",
     "@types/node": "18.7.18",
