build: add react-native plugin for mobile development

--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
+    "create.app.react-native": "nx g @nrwl/react-native:app",
     "create.app.react": "nx g @nrwl/react:app",
     "create.app.nest": "nx g @nrwl/nest:app",
     "create.app.next": "nx g @nrwl/next:app",
     "create.lib.ts": "nx g @nrwl/js:lib",
+    "create.lib.react-native": "npx nx g @nrwl/react-native:lib",
     "create.lib.react": "nx g @nrwl/react:lib",
     "create.lib.nest": "nx g @nrwl/nest:lib",
     "create.lib.next": "nx g @nrwl/next:lib",
@@ -51,6 +53,7 @@
     "@nrwl/next": "^15.0.4",
     "@nrwl/nx-cloud": "15.0.0",
     "@nrwl/react": "15.0.4",
+    "@nrwl/react-native": "^15.0.4",
     "@nrwl/storybook": "^15.0.4",
     "@nrwl/web": "15.0.4",
     "@nrwl/workspace": "^15.0.4",
