--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
+    "create.app.electron": "nx g nx-electron:app",
     "create.app.react-native": "nx g @nrwl/react-native:app",
     "create.app.react": "nx g @nrwl/react:app",
     "create.app.nest": "nx g @nrwl/nest:app",
@@ -81,6 +82,7 @@
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
     "nx": "15.0.4",
+    "nx-electron": "^12.1.0",
     "prettier": "^2.6.2",
     "react-test-renderer": "18.2.0",
     "ts-jest": "28.0.5",
