--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "create.lib.next": "nx g @nrwl/next:lib",
     "create.docs": "nx g @twittwer/compodoc:config",
     "create.book": "nx g @nrwl/storybook:configuration",
+    "setup.firebase.hosting": "nx g @nx-extend/firebase-hosting:add",
+    "setup.firebase": "nx generate @nxtend/firebase:init",
     "serve.book": "nx storybook",
     "build.book": "nx build-storybook",
     "serve": "nx serve",
@@ -82,7 +84,7 @@
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
     "nx": "15.0.4",
-    "nx-electron": "^12.1.0",
+    "nx-electron": "^13.2.1",
     "prettier": "^2.6.2",
     "react-test-renderer": "18.2.0",
     "ts-jest": "28.0.5",
