--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@enio.ai/data-ferret": ["packages/data-ferret/src/index.ts"],
       "@enio.ai/syntaxure": ["packages/syntaxture/src/index.ts"]
     }
   },
