--- a/packages/data-ferret/project.json
+++ b/packages/data-ferret/project.json
@@ -26,7 +26,8 @@
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
         "jestConfig": "packages/data-ferret/jest.config.ts",
-        "passWithNoTests": true
+        "passWithNoTests": false,
+        "codeCoverage": true
       }
     }
   },
