build: ideal build config for ts lib

--- a/packages/data-ferret/tsconfig.lib.json
+++ b/packages/data-ferret/tsconfig.lib.json
@@ -1,8 +1,11 @@
 {
   "extends": "./tsconfig.json",
+  "module": "esnext",
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
     "declaration": true,
+    "declarationMap": true,
+    "sourceMap": true,
     "types": ["node"]
   },
   "include": ["**/*.ts"],
