--- a/packages/data-ferret/project.json
+++ b/packages/data-ferret/project.json
@@ -14,6 +14,13 @@
         "assets": ["packages/data-ferret/*.md"]
       }
     },
+    "publish": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "node tools/scripts/publish.mjs data-ferret {args.ver} {args.tag}"
+      },
+      "dependsOn": ["build"]
+    },
     "lint": {
       "executor": "@nrwl/linter:eslint",
       "outputs": ["{options.outputFile}"],
