--- a/packages/data-ferret/tsconfig.lib.json
+++ b/packages/data-ferret/tsconfig.lib.json
@@ -4,9 +4,7 @@
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
     "declaration": true,
-    "declarationMap": true,
-    "sourceMap": true,
-    "types": ["node"]
+    "declarationMap": true
   },
   "include": ["**/*.ts"],
   "exclude": ["jest.config.ts", "**/*.spec.ts", "**/*.test.ts"]
