build(data-ferret): explicitely say package has no side-effects

--- a/packages/data-ferret/package.json
+++ b/packages/data-ferret/package.json
@@ -21,5 +21,6 @@
       "type" : "github",
       "url" : "https://github.com/orgs/enio-ireland/dashboard"
     }
-  ]
+  ],
+  "sideEffects": false
 }
