--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@nrwl/nest": "^15.0.4",
     "@nrwl/next": "^15.0.4",
     "@nrwl/nx-cloud": "15.0.0",
+    "@nrwl/nx-plugin": "^15.0.4",
     "@nrwl/react": "15.0.4",
     "@nrwl/react-native": "^15.0.4",
     "@nrwl/storybook": "^15.0.4",
@@ -70,7 +71,6 @@
     "@nx-extend/firebase-hosting": "^1.0.1",
     "@nxtend/firebase": "^12.1.0",
     "@testing-library/react": "13.4.0",
-    "@twittwer/compodoc": "^1.8.2",
     "@types/jest": "28.1.1",
     "@types/mocha": "^9.1.1",
     "@types/node": "18.7.18",
