feat(typedoc): added files for nx plugin for typedoc integration

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,6 +36,11 @@
       "rules": {
         "@typescript-eslint/no-empty-function": "off"
       }
+    },
+    {
+      "files": "*.json",
+      "parser": "jsonc-eslint-parser",
+      "rules": {}
     }
   ]
 }
