--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "private": true,
   "dependencies": {
+    "@swc/helpers": "~0.4.11",
     "core-js": "^3.6.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -54,7 +55,7 @@
     "@jscutlery/semver": "^2.27.1",
     "@nrwl/cli": "15.0.4",
     "@nrwl/cypress": "^15.0.4",
-    "@nrwl/devkit": "^15.0.4",
+    "@nrwl/devkit": "15.0.4",
     "@nrwl/eslint-plugin-nx": "15.0.4",
     "@nrwl/jest": "15.0.4",
     "@nrwl/js": "15.0.4",
@@ -70,6 +71,9 @@
     "@nrwl/workspace": "^15.0.4",
     "@nx-extend/firebase-hosting": "^1.0.1",
     "@nxtend/firebase": "^12.1.0",
+    "@swc-node/register": "^1.4.2",
+    "@swc/cli": "~0.1.55",
+    "@swc/core": "^1.2.173",
     "@testing-library/react": "13.4.0",
     "@types/jest": "28.1.1",
     "@types/mocha": "^9.1.1",
@@ -90,6 +94,7 @@
     "husky": "^8.0.1",
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
+    "jsonc-eslint-parser": "^2.1.0",
     "nx": "15.0.4",
     "nx-electron": "^13.2.1",
     "prettier": "^2.6.2",
