--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,8 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@enio.ai/data-ferret": ["packages/data-ferret/src/index.ts"]
+      "@enio.ai/data-ferret": ["packages/data-ferret/src/index.ts"],
+      "@enio.ai/typedoc": ["packages/typedoc/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
