--- a/packages/typedoc/package.json
+++ b/packages/typedoc/package.json
@@ -3,5 +3,12 @@
   "version": "0.0.1",
   "main": "src/index.js",
   "generators": "./generators.json",
-  "executors": "./executors.json"
+  "executors": "./executors.json",
+  "dependencies": {
+    "@nrwl/devkit": "^15.0.10",
+    "tslib": "^2.4.1"
+  },
+  "peerDependencies": {
+    "typedoc": "^0.23.20"
+  }
 }
