refactor(typedoc): executor placeholder

--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "create.lib.react": "nx g @nrwl/react:lib",
     "create.lib.nest": "nx g @nrwl/nest:lib",
     "create.lib.next": "nx g @nrwl/next:lib",
-    "create.docs": "nx g @twittwer/compodoc:config",
+    "create.docs": "nx @enio.ai/typedoc:typedoc",
     "create.book": "nx g @nrwl/storybook:configuration",
+    "setup.docs": "nx g @enio.ai/typedoc:config",
     "setup.firebase.hosting": "nx g @nx-extend/firebase-hosting:add",
     "setup.firebase": "nx generate @nxtend/firebase:init",
     "serve.book": "nx storybook",
