docs(data-ferret): setup documentation automation

--- a/packages/data-ferret/project.json
+++ b/packages/data-ferret/project.json
@@ -36,6 +36,13 @@
         "passWithNoTests": false,
         "codeCoverage": true
       }
+    },
+    "typedoc": {
+      "executor": "@enio.ai/typedoc:typedoc",
+      "options": {
+        "options": "typedoc.json"
+      },
+      "configurations": {}
     }
   },
   "tags": []
