--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "create.book": "nx g @nrwl/storybook:configuration",
     "setup.docs": "nx g @enio.ai/typedoc:config",
     "setup.firebase.hosting": "nx g @nx-extend/firebase-hosting:add",
-    "setup.firebase": "nx generate @nxtend/firebase:init",
+    "setup.firebase": "nx g @nxtend/firebase:init",
     "serve.book": "nx storybook",
     "build.book": "nx build-storybook",
     "serve": "nx serve",
@@ -53,6 +53,7 @@
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
+    "@enio.ai/typedoc": "^1.0.0",
     "@jscutlery/semver": "^2.27.1",
     "@nrwl/cli": "15.0.4",
     "@nrwl/cypress": "^15.0.4",
@@ -102,6 +103,9 @@
     "react-test-renderer": "18.2.0",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
+    "typedoc": "^0.23.20",
+    "typedoc-plugin-rename-defaults": "^0.6.4",
+    "typedoc-theme-hierarchy": "^3.0.0",
     "typescript": "~4.7.2"
   },
   "config": {
