--- a/packages/typedoc/package.json
+++ b/packages/typedoc/package.json
@@ -33,5 +33,19 @@
       "url": "https://github.com/orgs/enio-ireland/dashboard"
     }
   ],
-  "keywords": ["typedoc", "nx", "nrwl", "plugin", "enio", "enio.ai", "typedoc-plugin", "monorepo", "documentation", "typescript", "tsc", "typedoc-theme-hierarchy", "andrew.redican"]
+  "keywords": [
+    "typedoc",
+    "nx",
+    "nrwl",
+    "plugin",
+    "enio",
+    "enio.ai",
+    "typedoc-plugin",
+    "monorepo",
+    "documentation",
+    "typescript",
+    "tsc",
+    "typedoc-theme-hierarchy",
+    "andrew.redican"
+  ]
 }
