build: pull latest nx dependencies :arrow_up:

--- a/package.json
+++ b/package.json
@@ -55,22 +55,22 @@
     "@commitlint/config-conventional": "^17.0.3",
     "@enio.ai/typedoc": "^1.0.0",
     "@jscutlery/semver": "^2.27.1",
-    "@nrwl/cli": "15.0.4",
-    "@nrwl/cypress": "^15.0.4",
-    "@nrwl/devkit": "15.0.4",
-    "@nrwl/eslint-plugin-nx": "15.0.4",
-    "@nrwl/jest": "15.0.4",
-    "@nrwl/js": "15.0.4",
-    "@nrwl/linter": "^15.0.4",
-    "@nrwl/nest": "^15.0.4",
-    "@nrwl/next": "^15.0.4",
-    "@nrwl/nx-cloud": "15.0.0",
-    "@nrwl/nx-plugin": "^15.0.4",
-    "@nrwl/react": "15.0.4",
-    "@nrwl/react-native": "^15.0.4",
-    "@nrwl/storybook": "^15.0.4",
-    "@nrwl/web": "15.0.4",
-    "@nrwl/workspace": "^15.0.4",
+    "@nrwl/cli": "15.0.13",
+    "@nrwl/cypress": "15.0.13",
+    "@nrwl/devkit": "15.0.13",
+    "@nrwl/eslint-plugin-nx": "15.0.13",
+    "@nrwl/jest": "15.0.13",
+    "@nrwl/js": "15.0.13",
+    "@nrwl/linter": "15.0.13",
+    "@nrwl/nest": "15.0.13",
+    "@nrwl/next": "15.0.13",
+    "@nrwl/nx-cloud": "15.0.2",
+    "@nrwl/nx-plugin": "15.0.13",
+    "@nrwl/react": "15.0.13",
+    "@nrwl/react-native": "15.0.13",
+    "@nrwl/storybook": "15.0.13",
+    "@nrwl/web": "15.0.13",
+    "@nrwl/workspace": "15.0.13",
     "@nx-extend/firebase-hosting": "^1.0.1",
     "@nxtend/firebase": "^12.1.0",
     "@swc-node/register": "^1.4.2",
@@ -97,8 +97,8 @@
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
     "jsonc-eslint-parser": "^2.1.0",
-    "nx": "15.0.4",
-    "nx-electron": "^13.2.1",
+    "nx": "15.0.13",
+    "nx-electron": "^12.1.0",
     "prettier": "^2.6.2",
     "react-test-renderer": "18.2.0",
     "ts-jest": "28.0.5",
