--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "create.lib.react": "nx g @nrwl/react:lib",
     "create.lib.nest": "nx g @nrwl/nest:lib",
     "create.lib.next": "nx g @nrwl/next:lib",
-    "create.docs": "nx @enio.ai/typedoc:typedoc",
+    "create.docs": "nx typedoc",
     "create.book": "nx g @nrwl/storybook:configuration",
     "setup.docs": "nx g @enio.ai/typedoc:config",
     "setup.firebase.hosting": "nx g @nx-extend/firebase-hosting:add",
