ci: semver nx plugin install and configure projects to use it

--- a/packages/typedoc/project.json
+++ b/packages/typedoc/project.json
@@ -55,6 +55,12 @@
         "jestConfig": "packages/typedoc/jest.config.ts",
         "passWithNoTests": true
       }
+    },
+    "version": {
+      "executor": "@jscutlery/semver:version",
+      "options": {
+        "preset": "conventional"
+      }
     }
   },
   "tags": []
