--- a/packages/data-ferret/project.json
+++ b/packages/data-ferret/project.json
@@ -43,6 +43,12 @@
         "options": "typedoc.json"
       },
       "configurations": {}
+    },
+    "version": {
+      "executor": "@jscutlery/semver:version",
+      "options": {
+        "preset": "conventional"
+      }
     }
   },
   "tags": []
