--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "e2e": "nx e2e",
     "e2e:affected": "nx affected:e2e",
     "build": "nx build",
-    "release": "nx affected --target version",
+    "release": "nx version",
     "publish": "nx publish --verbose",
     "graph": "nx graph",
     "remove": "nx g rm",
