docs: package readme files will link to parent workspace contributors :busts_in_silhouette:

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -5,11 +5,7 @@
   "repoHost": "https://github.com/enio-ireland/enio",
   "files": [
     "README.md",
-    "CONTRIBUTORS.md",
-    "./packages/typedoc/README.md",
-    "./packages/typedoc/CONTRIBUTORS.md",
-    "./packages/data-ferret/README.md",
-    "./packages/data-ferret/CONTRIBUTORS.md"
+    "CONTRIBUTORS.md"
   ],
   "imageSize": 100,
   "commit": true,
