feat: add selectiveCopy() to API for data cloning
selectiveCopy clones data structures with ease, it will understand custom classes when registered,
and even detect and replicate circular references when configured turned ON

BREAKING CHANGE: to support custom classes for cloning, iterable class registration was reworked

--- a/packages/data-ferret/package.json
+++ b/packages/data-ferret/package.json
@@ -31,10 +31,15 @@
     "structures",
     "nested",
     "objects",
+    "object",
     "circular-references",
     "typescript",
     "enio.ai",
     "enio",
-    "andrew.redican"
+    "andrew.redican",
+    "clone",
+    "copy",
+    "json",
+    "circular"
   ]
 }
