--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -13,14 +13,14 @@ jobs:
       uses: actions/checkout@v3
       with:
         fetch-depth: 0
-
+    - name: Install dependencies
+      uses: bahmutov/npm-install@v1
     - name: Run Unit Tests and Coverage Reports
       uses: MansaGroup/nrwl-nx-action@v3.2.1
       with:
         affected: true
         nxCloud: false
         targets: test
-
     - name: Code Coverage Report
       uses: dkhunt27/nx-code-coverage@v0.3.0
       with:
