--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -13,8 +13,14 @@ jobs:
       uses: actions/checkout@v3
       with:
         fetch-depth: 0
+    - name: Use Node v16
+      uses: actions/setup-node@v3
+      with:
+        node-version: 16
     - name: Install dependencies
       uses: bahmutov/npm-install@v1
+      with:
+        install-command: npm i --force
     - name: Run Unit Tests and Coverage Reports
       uses: MansaGroup/nrwl-nx-action@v3.2.1
       with:
