--- a/package.json
+++ b/package.json
@@ -55,22 +55,22 @@
     "@commitlint/config-conventional": "^17.0.3",
     "@enio.ai/typedoc": "^1.0.0",
     "@jscutlery/semver": "^2.29.0",
-    "@nrwl/cli": "15.0.13",
-    "@nrwl/cypress": "15.0.13",
-    "@nrwl/devkit": "15.0.13",
-    "@nrwl/eslint-plugin-nx": "15.0.13",
-    "@nrwl/jest": "15.0.13",
-    "@nrwl/js": "15.0.13",
-    "@nrwl/linter": "15.0.13",
-    "@nrwl/nest": "15.0.13",
-    "@nrwl/next": "15.0.13",
+    "@nrwl/cli": "15.4.2",
+    "@nrwl/cypress": "15.4.2",
+    "@nrwl/devkit": "15.4.2",
+    "@nrwl/eslint-plugin-nx": "15.4.2",
+    "@nrwl/jest": "15.4.2",
+    "@nrwl/js": "15.4.2",
+    "@nrwl/linter": "15.4.2",
+    "@nrwl/nest": "15.4.2",
+    "@nrwl/next": "15.4.2",
     "@nrwl/nx-cloud": "15.0.2",
-    "@nrwl/nx-plugin": "15.0.13",
-    "@nrwl/react": "15.0.13",
-    "@nrwl/react-native": "15.0.13",
-    "@nrwl/storybook": "15.0.13",
-    "@nrwl/web": "15.0.13",
-    "@nrwl/workspace": "15.0.13",
+    "@nrwl/nx-plugin": "15.4.2",
+    "@nrwl/react": "15.4.2",
+    "@nrwl/react-native": "15.4.2",
+    "@nrwl/storybook": "15.4.2",
+    "@nrwl/web": "15.4.2",
+    "@nrwl/workspace": "15.4.2",
     "@nx-extend/firebase-hosting": "^1.0.1",
     "@nxtend/firebase": "^12.1.0",
     "@swc-node/register": "^1.4.2",
@@ -79,9 +79,9 @@
     "@testing-library/react": "13.4.0",
     "@types/jest": "28.1.1",
     "@types/mocha": "^9.1.1",
-    "@types/node": "18.7.18",
-    "@types/react": "18.0.20",
-    "@types/react-dom": "18.0.6",
+    "@types/node": "18.11.9",
+    "@types/react": "18.0.25",
+    "@types/react-dom": "18.0.9",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
     "babel-jest": "28.1.1",
@@ -91,13 +91,13 @@
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-jsx-a11y": "6.6.1",
-    "eslint-plugin-react": "7.31.8",
+    "eslint-plugin-react": "7.31.11",
     "eslint-plugin-react-hooks": "4.6.0",
     "husky": "^8.0.1",
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
     "jsonc-eslint-parser": "^2.1.0",
-    "nx": "15.0.13",
+    "nx": "15.4.2",
     "nx-electron": "^13.2.1",
     "prettier": "^2.6.2",
     "react-test-renderer": "18.2.0",
@@ -107,6 +107,10 @@
     "typedoc-plugin-rename-defaults": "^0.6.4",
     "typedoc-theme-hierarchy": "^3.0.0",
     "typescript": "~4.7.2"
+  },
+  "overrides": {
+    "react": "18.2.0",
+    "@nrwl/workspace": "15.4.2"
   },
   "config": {
     "commitizen": {
@@ -127,3 +131,4 @@
     }
   ]
 }
+
