--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -5,6 +5,9 @@
 name: 'Unit Tests & Code Coverage Review'
 on: [pull_request]
 
+permissions:
+  contents: write
+
 jobs:
   unit-tests-review:
     runs-on: ubuntu-latest
