--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -27,6 +27,19 @@ jobs:
         affected: true
         nxCloud: true
         targets: test
+
+    - name: Verify Changed files
+      uses: tj-actions/verify-changed-files@v13
+      id: verify-changed-files
+      with:
+        files: coverage
+
+    - name: Run step only when any of the above files change.
+      if: steps.verify-changed-files.outputs.files_changed == 'true'
+      run: |
+        echo "Changed files: ${{ steps.verify-changed-files.outputs.changed_files }}"
+
+
     - name: Code Coverage Report
       uses: dkhunt27/nx-code-coverage@v0.3.0
       with:
