--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -27,6 +27,7 @@ jobs:
         affected: true
         nxCloud: true
         targets: test
+        args: --skip-nx-cache
 
     - name: Verify Changed files
       uses: tj-actions/verify-changed-files@v13
