--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -5,8 +5,7 @@
 name: 'Unit Tests & Code Coverage Review'
 on: [pull_request]
 
-permissions:
-  contents: write
+permissions: write-all
 
 jobs:
   unit-tests-review:
