--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -5,11 +5,9 @@
 name: 'Unit Tests & Code Coverage Review'
 on: [pull_request]
 
-permissions: write-all
-
 jobs:
   unit-tests-review:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
     - name: Checkout
       uses: actions/checkout@v3
