--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -32,9 +32,7 @@ jobs:
       id: get-directory-names
       uses: featherweight-design/collect-directory-names-by-file-glob@v1.1
       with:
-        file-glob: '**/*.json'
-        search-directory: '/coverage'
-        unique: "true"
+        file-glob: 'coverage-final.json'
 
     - name: Use Directory Names
       run: echo "Directory Names are ${{ steps.get-directory-names.outputs.directory-names}}
