--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -51,8 +51,11 @@ jobs:
     - name: Check in code coverage
       uses: EndBug/add-and-commit@v9
       with:
+        add: coverage
         default_author: github_actions
         message: 'docs: add code coverage report'
+        fetch: false
+        push: false
 
     - name: Get directory names
       id: get-directory-names
