--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -42,20 +42,22 @@ jobs:
     #   run: echo "There are uncommitted changes"
 
     ##############################
-    # - name: check changes
-    #   run: |
-    #     git add coverage
-    #     git commit -m "docs: add code coverage report"
+    - name: Check in code coverage
+      run: |
+        git config user.name github-actions
+        git config user.email github-actions@github.com
+        git add coverage
+        git commit -m "docs: add code coverage report"
     ##############################
 
-    - name: Check in code coverage
-      uses: EndBug/add-and-commit@v9
-      with:
-        add: coverage
-        default_author: github_actions
-        message: 'docs: add code coverage report'
-        fetch: false
-        push: false
+    # - name: Check in code coverage
+    #   uses: EndBug/add-and-commit@v9
+    #   with:
+    #     add: coverage
+    #     default_author: github_actions
+    #     message: 'docs: add code coverage report'
+    #     fetch: false
+    #     push: false
 
     - name: Get directory names
       id: get-directory-names
