--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -63,8 +63,7 @@ jobs:
       id: get-directory-names
       uses: featherweight-design/collect-directory-names-by-file-glob@v1.1
       with:
-        search-directory: '/coverage'
-        file-glob: '**/coverage-final.json'
+        file-glob: 'coverage-final.json'
 
     - name: Use Directory Names
       run: echo "Directory Names are ${{ steps.get-directory-names.outputs.directory-names}}"
