refactor: drop unused steps

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -50,34 +50,16 @@ jobs:
         git commit -m "docs: add code coverage report"
     ##############################
 
-    # - name: Check in code coverage
-    #   uses: EndBug/add-and-commit@v9
-    #   with:
-    #     add: coverage
-    #     default_author: github_actions
-    #     message: 'docs: add code coverage report'
-    #     fetch: false
-    #     push: false
-
-    - name: Get directory names
-      id: get-directory-names
-      uses: featherweight-design/collect-directory-names-by-file-glob@v1.1
+    - name: Verify Changed files
+      uses: tj-actions/verify-changed-files@v13
+      id: verify-changed-files
       with:
-        file-glob: 'coverage-final.json'
+        files: coverage
 
-    - name: Use Directory Names
-      run: echo "Directory Names are ${{ steps.get-directory-names.outputs.directory-names}}"
-
-    # - name: Verify Changed files
-    #   uses: tj-actions/verify-changed-files@v13
-    #   id: verify-changed-files
-    #   with:
-    #     files: coverage
-
-    # - name: Run step only when any of the above files change.
-    #   if: steps.verify-changed-files.outputs.files_changed == 'true'
-    #   run: |
-    #     echo "Changed files: ${{ steps.verify-changed-files.outputs.changed_files }}"
+    - name: Run step only when any of the above files change.
+      if: steps.verify-changed-files.outputs.files_changed == 'true'
+      run: |
+        echo "Changed files: ${{ steps.verify-changed-files.outputs.changed_files }}"
 
     - name: Code Coverage Report
       uses: dkhunt27/nx-code-coverage@v0.3.0
