ci: print workspace

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -28,6 +28,18 @@ jobs:
         nxCloud: true
         targets: test
 
+    ###########################
+
+    - name: Print github workspace
+      run: |
+        echo "GITHUB_WORKSPACE = $GITHUB_WORKSPACE"
+        echo "github.workspace = ${{ github.workspace }}"
+        echo "pr.ref = ${{github.event.pull_request.head.ref}}"
+        echo "github.ref = ${{ github.ref }}"
+        echo "$GITHUB_CONTEXT"
+
+    ###########################
+
     # Testing if can see any changes after running tests
 
     # - name: Make uncommitted changes by creating empty file
