ci: experiment list of directories containing code coverage

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -38,6 +38,7 @@ jobs:
         echo "pwd = $(pwd)"
         echo "files:"
         echo "$(ls)"
+        echo "$(find . -type f -name '*coverage*' | sed -r 's|/[^/]+$||' |sort |uniq)"
 
     ##############################
     # - name: Check in code coverage
