--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -47,7 +47,7 @@ jobs:
       run: echo "$(find coverage -type f -name '*coverage*' | sed -r 's|/[^/]+$||' |sort |uniq)" >> $GITHUB_OUTPUT
 
     - name: Test Output Access
-      run: echo "report locations = ${{join(steps.run_tests.outputs.*, '\n')}}"
+      run: echo "report locations = ${{join(steps.find_reports.outputs.*, '\n')}}"
 
     ##############################
     # - name: Check in code coverage
